changed columns from autofill to 5, fixed spacing in context

--- a/src/App.css
+++ b/src/App.css
@@ -30,7 +30,7 @@ header h2 {
   display: grid;
   padding: 1rem;
   overflow-y: scroll;
-  grid-template-columns: repeat(auto-fill, minmax(100px, 1fr));
+  grid-template-columns: repeat(5, minmax(100px, 1fr));
   grid-template-rows: repeat(6, minmax(100px, 1fr));
   grid-column-gap: 1rem;
   grid-row-gap: 1rem;
